--- a/TestUI/Image.xaml
+++ b/TestUI/Image.xaml
@@ -1,12 +1,76 @@
-﻿<Window x:Class="TestUI.Image"
+﻿<controls:MetroWindow x:Class="TestUI.ImageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:d3 ="clr-namespace:InteractiveDataDisplay.WPF;assembly=InteractiveDataDisplay.WPF"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:TestUI"
         mc:Ignorable="d"
-        Title="图像" Height="450" Width="800">
+        Loaded="Window_Loaded"
+        Title="图像" Height="675" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <d3:Chart Name="Plotter1">
+            <d3:Chart.Title>
+                <TextBlock HorizontalAlignment="Center" FontSize="15" Margin="0,5,0,5">误差信号时域图</TextBlock>
+            </d3:Chart.Title>
+            <d3:Chart.LegendContent>
+                <d3:LegendItemsPanel>
+                    <d3:LegendItemsPanel.Resources>
+                        <DataTemplate x:Key="InteractiveDataDisplay.WPF.LineGraph">
+                            <StackPanel Orientation="Horizontal">
+                                <Line Width="15" Height="15" X1="0" Y1="0" X2="15" Y2="15"
+                                                  Stroke="{Binding Path=Stroke}" StrokeThickness="2" />
+                                <TextBlock Margin="5,0,0,0" Text="{Binding Path=Description}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </d3:LegendItemsPanel.Resources>
+                </d3:LegendItemsPanel>
+            </d3:Chart.LegendContent>
+            <Grid Name="Tlines"/>
+        </d3:Chart>
+        <d3:Chart Name="Plotter2" Grid.Row="1">
+            <d3:Chart.Title>
+                <TextBlock HorizontalAlignment="Center" FontSize="15" Margin="0,5,0,5">误差信号频域图</TextBlock>
+            </d3:Chart.Title>
+            <d3:Chart.LegendContent>
+                <d3:LegendItemsPanel>
+                    <d3:LegendItemsPanel.Resources>
+                        <DataTemplate x:Key="InteractiveDataDisplay.WPF.LineGraph">
+                            <StackPanel Orientation="Horizontal">
+                                <Line Width="15" Height="15" X1="0" Y1="0" X2="15" Y2="15"
+                                                  Stroke="{Binding Path=Stroke}" StrokeThickness="2" />
+                                <TextBlock Margin="5,0,0,0" Text="{Binding Path=Description}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </d3:LegendItemsPanel.Resources>
+                </d3:LegendItemsPanel>
+            </d3:Chart.LegendContent>
+            <Grid Name="Flines"/>
+        </d3:Chart>
+        <d3:Chart Name="Plotter3" Grid.Row="2">
+            <d3:Chart.Title>
+                <TextBlock HorizontalAlignment="Center" FontSize="15" Margin="0,5,0,5">辨识权重图</TextBlock>
+            </d3:Chart.Title>
+            <d3:Chart.LegendContent>
+                <d3:LegendItemsPanel>
+                    <d3:LegendItemsPanel.Resources>
+                        <DataTemplate x:Key="InteractiveDataDisplay.WPF.LineGraph">
+                            <StackPanel Orientation="Horizontal">
+                                <Line Width="15" Height="15" X1="0" Y1="0" X2="15" Y2="15"
+                                      Stroke="{Binding Path=Stroke}" StrokeThickness="2" />
+                                <TextBlock Margin="5,0,0,0" Text="{Binding Path=Description}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </d3:LegendItemsPanel.Resources>
+                </d3:LegendItemsPanel>
+            </d3:Chart.LegendContent>
+            <Grid Name="Wlines"/>
+        </d3:Chart>
     </Grid>
-</Window>
+</controls:MetroWindow>
